tests/error/comprehension_errors/capture2.err
Error: Copy violation (at $FILE:18:33)
   | 
16 | @guppy(module)
17 | def foo(xs: list[int], q: qubit @owned) -> list[int]:
18 |     return [x for x in xs if bar(q)]
   |                                  ^ Variable `q` with non-copyable type `qubit` would be
   |                                    consumed multiple times
   |                                    when evaluating this
   |                                    comprehension

Guppy compilation failed due to 1 previous error
